<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="#EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/create_a_new_task"
            android:textAlignment="center"
            android:textSize="24sp" />
        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFF"
            android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_title"
            android:textColor="#120136"
            android:textSize="18sp"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="14sp"
                android:padding="12dp"
                android:background="@drawable/input_cell"
                android:inputType="textPersonName"
                android:textColor="#120136"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
        <LinearLayout
            android:padding="8dp"
            android:background="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desription"
                android:textColor="#120136"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="12dp"
                android:hint="@string/task"
                android:background="@drawable/input_cell"
                android:inputType="textPersonName"
                android:textColor="#120136"
                app:layout_constraintStart_toStartOf="@+id/editTitle"
                app:layout_constraintTop_toBottomOf="@+id/editTitle" />
        </LinearLayout>
        <LinearLayout
            android:padding="8dp"
            android:background="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Deadline"
                android:textColor="#120136"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <Button
                android:layout_margin="5dp"
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="12dp"
                android:hint="Pick a Date"
                android:background="@drawable/input_cell"
                android:inputType="textPersonName"
                android:textColor="#120136"
                app:layout_constraintStart_toStartOf="@+id/editTitle"
                app:layout_constraintTop_toBottomOf="@+id/editTitle" />
            <Button
                android:layout_margin="5dp"
                android:id="@+id/deadline_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="12dp"
                android:hint="Pick a Time"
                android:background="@drawable/input_cell"
                android:inputType="textPersonName"
                android:textColor="#120136"
                app:layout_constraintStart_toStartOf="@+id/editTitle"
                app:layout_constraintTop_toBottomOf="@+id/editTitle" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="8dp"
            android:background="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/date_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Created at"
                android:textColor="#120136"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:padding="8dp"
            android:background="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/dead_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#120136"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dead_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#120136"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/appname_style"
                android:padding="5dp"
                android:text="@string/add"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/cancel1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toStartOf="@id/add_btn"
                android:background="@drawable/appname_style"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>